2005-09-15  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: Output more messages about compilation, linking
	and running of scanner, to try to help track down any problems.
	(#167688)

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: patch from Stefan Kost to improve error messages,
	though I changed it slightly so it doesn't output errno.

2005-09-09  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: 
	* style.css: 
	* gtk-doc.xsl: Use a fixed navigation bar at the top of the page.
	Patch from Stefan Kost with minor changes by me. (#313569)

2005-08-18  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: added "const" in a few places to avoid lots
	of warnings if all gcc warnings are on. (#312985)

2005-08-15  Stefan Kost  <ensonic@users.sf.net>

	* COPYING-DOCS:
	* Makefile.am:
	* configure.in:
	* omf.make:
	* xmldocs.make:
          adding the infrastructure for installation of gtkdoc manual

2005-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
        fix warning about uninitialized var EXPAND_CONTENT_FILES

Tue Aug  9 12:01:27 2005  tjlocal  <timj@imendio.com>

	* autogen.sh: bail out with exit $? for failing programs.

2005-07-26  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make: Pass DOC_MAIN_SGML_FILE as the main filename to
	gtkdoc-mkdb. Avoids creating spurious foo.sgml files in an XML build.
	Patch from Malcolm Tredinnick. (#311344)

	Prefix build messages with "gtk-doc: " rather than surrounding them
	with "***" which looks like an error. (#170008)

2005-07-26  Damon Chaplin  <damon@gnome.org>

	* README: removed comment about not being able to add section
	documentation to source code files, which is not true any more.

2005-07-03  Damon Chaplin  <damon@gnome.org>

	* Released 1.4.

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in: Fix typos in warnings.

2005-06-17  Mikael Hallendal  <micke@imendio.com>

	* README: Updated Devhelp web address.
